# zksync-os-agent-testing

./: .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml  profile.sh  root_of_unity.py  rust-toolchain.toml  scope.md
api/: Cargo.toml
api/src/: get_proof.rs  helpers.rs  lib.rs
basic_bootloader/: Cargo.toml
basic_bootloader/src/: bootloader.rs  lib.rs
basic_bootloader/src/bootloader/: block_header.rs  config.rs  constants.rs  errors.rs  gas_helpers.rs  interop.rs  mod.rs  process_l1_transaction.rs  process_transaction.rs  result_keeper.rs  rlp.rs  run_single_interaction.rs  runner.rs  stf.rs  supported_ees.rs
basic_system/: Cargo.toml
basic_system/src/: basic_system.rs  cost_constants.rs  lib.rs
basic_system/src/precompiles/: fri_proof_verifier.rs  post_init_op.rs
basic_system/src/system_functions/: bn254_ecmul.rs  bn254_pairing_check.rs  ecrecover.rs  field_ops.rs  keccak256.rs  mod.rs  p256_verify.rs  point_evaluation.rs
basic_system/src/system_implementation/: mod.rs
callable_oracles/: Cargo.toml
callable_oracles/src/: lib.rs
callable_oracles/src/arithmetic/: mod.rs
callable_oracles/src/blob_kzg_commitment/: mod.rs
callable_oracles/src/field_hints/: impls.rs  mod.rs
callable_oracles/src/hash_to_prime/: common.rs  compute.rs  evaluate.rs  mod.rs  verify.rs
callable_oracles/src/kzg_commitment/: mod.rs
callable_oracles/src/utils/: evaluate.rs
circuit_test_program/: Cargo.toml
circuit_test_program/src/: main.rs
crypto/: Cargo.toml
crypto/src/: fri_verifier.rs  glv_decomposition.rs  hash.rs  lib.rs
crypto/src/bigint_delegation/: delegation.rs  mod.rs  u256.rs  u512.rs
crypto/src/blake2s/: mod.rs  test.rs
crypto/src/bls12_381/: consts.rs  eip2537.rs  mod.rs
crypto/src/secp256k1/: hooks.rs  mod.rs  recover.rs
crypto/src/secp256r1/: context.rs  mod.rs  verify.rs
crypto/tests/: secp256k1.rs  secp256r1.rs
cycle_marker/: Cargo.toml
cycle_marker/src/: lib.rs
evm_interpreter/: Cargo.toml
evm_interpreter/src/: ee_trait_impl.rs  evm_stack.rs  gas.rs  gas_constants.rs  i256.rs  interpreter.rs  lib.rs  native_resource_constants.rs  opcodes.rs  precompile_addresses.rs  u256.rs  u256_helpers.rs  utils.rs
evm_interpreter/src/instructions/: arithmetic.rs  bitwise.rs  control_flow.rs  environment.rs  heap.rs  host.rs  mod.rs  stack.rs  system.rs
experiments/experiment_2/: Cargo.toml
experiments/experiment_2/risc_v_binary/: Cargo.toml
experiments/experiment_2/src/: main.rs  non_determenism.rs
forward_system/: Cargo.toml
forward_system/src/: lib.rs
forward_system/src/run/: batch.rs  convert.rs  interface_impl.rs  mod.rs  output.rs  preimage_source.rs  result_keeper.rs  tracing_impl.rs  tree.rs  validator_impl.rs
forward_system/src/system/: bootloader.rs  mod.rs  system.rs  tests.rs
oracle_provider/: Cargo.toml
oracle_provider/src/: lib.rs
proof_running_system/: Cargo.toml
proof_running_system/src/: lib.rs
proof_running_system/src/io_oracle/: mod.rs
proof_running_system/src/system/: bootloader.rs  mod.rs
scripts/: Cargo.toml
scripts/src/: main.rs
storage_models/: Cargo.toml
storage_models/src/: lib.rs
storage_models/src/common_structs/: generic_transient_storage.rs
supporting_crates/delegated_u256/: Cargo.toml
supporting_crates/delegated_u256/src/: arithmetic.rs  utils.rs
supporting_crates/modexp/: Cargo.toml
supporting_crates/solidity_abi/: Cargo.toml
supporting_crates/solidity_abi/src/: lib.rs
supporting_crates/u256/: Cargo.toml
supporting_crates/u256/src/: lib.rs
supporting_crates/word_serialization_derive/: Cargo.toml
supporting_crates/word_serialization_derive/src/: lib.rs
system_hooks/: Cargo.toml
system_hooks/src/: addresses_constants.rs  contract_deployer.rs  interop_root_reporter.rs  l1_messenger.rs  l2_base_token.rs  lib.rs  mock_precompiles.rs  precompiles.rs  system_context.rs
system_hooks/src/call_hooks/: contract_deployer.rs  contract_deployer_temp.rs  l1_messenger.rs  l2_base_token.rs  mint_base_token.rs  mock_precompiles.rs  mod.rs  precompiles.rs  set_bytecode_on_address.rs
system_hooks/src/event_hooks/: interop_root_reporter.rs  mod.rs  system_context.rs
system_hooks/src/precompiles/: fri_verifier.rs  mod.rs
tests/block_reexecutor/: Cargo.toml  README.md
tests/block_reexecutor/src/: cache.rs  main.rs  rpc_client.rs  rpc_oracle.rs  tx_check.rs
tests/common/: Cargo.toml
tests/common/src/: lib.rs
tests/evm_tester/: Cargo.toml  download_ethereum_fixtures.sh
tests/evm_tester/indexes/: develop-blockchain-tests.yaml  develop-state-tests.yaml  stable-blockchain-tests.yaml  stable-state-tests.yaml
tests/evm_tester/src/: constants.rs  lib.rs  utils.rs
tests/revm_runner/: Cargo.toml
tests/revm_runner/src/: bytecode_hash.rs  convert_alloy.rs  helpers.rs  lib.rs  revm_call_tracing.rs  revm_runner.rs  revm_state_provider.rs  storage_diff_comp.rs
zk_ee/: Cargo.toml
zk_ee/src/: errors.rs  execution_environment_type.rs  fri.rs  gas.rs  lib.rs  memory.rs  system.rs  transaction.rs
zk_ee/src/common_structs/: cache_record.rs  callee_account_properties.rs  chain_state_commitment.rs  da_commitment_scheme.rs  events_storage.rs  history_counter.rs  history_list.rs  interop_root.rs  interop_root_storage.rs  logs_storage.rs  mod.rs  new_preimages_publication_storage.rs  new_settlement_layer_chain_id_storage.rs  proof_data.rs  pubdata_compression.rs  state_root_view.rs  system_hooks.rs  warm_storage_key.rs
zk_ee/src/memory/: byte_slice.rs  slice_vec.rs  stack_trait.rs
zk_ee/tests/: playground.rs
zk_ip/: Cargo.toml  README.md
zk_ip/binary/: .gitignore  Cargo.toml  dump_bin.sh
zk_ip/guest/: Cargo.toml
zk_ip/host/: Cargo.toml
zk_ip/src/: main.rs
zks_get_proof_verifier/: Cargo.toml
zks_get_proof_verifier/src/: lib.rs
zksync_os/: .gitignore  Cargo.toml  README.md  app.text  dump_bin.sh  rust-toolchain.toml  upd_local_era.sh
zksync_os/.cargo/: config.toml
zksync_os/reproduce/: Dockerfile  reproduce.sh
zksync_os/src/: main.rs
zksync_os_runner/: Cargo.toml  README.md
zksync_os_runner/src/: lib.rs  run_transpiler.rs
(+579 files in other folders)
