[workspace]
resolver = "2"

members = [
    "api",
    "basic_bootloader",
    "basic_system",
    "callable_oracles",
    "crypto",
    "evm_interpreter",
    "forward_system",
    "oracle_provider",
    "proof_running_system",
    "storage_models",
    "zk_ee",
    "zksync_os_runner",
    "system_hooks",
    "supporting_crates/modexp",
    "supporting_crates/keccak",
    "supporting_crates/solidity_abi",
    "supporting_crates/solidity_abi_derive",
    "tests/rig",
    "tests/instances/transactions",
    "tests/instances/erc20",
    "tests/instances/forge_tests",
    "tests/instances/precompiles",
    "tests/instances/bench",
    "tests/instances/unit",
    "tests/instances/system_hooks",
    "tests/instances/multiblock_batch",
    "tests/instances/header",
    "tests/instances/evm",
    "cycle_marker",
    "tests/binary_checker",
    "supporting_crates/delegated_u256",
    "supporting_crates/u256",
    "scripts"
]

exclude = [
    "zksync_os",
    "supporting_crates/nostd_compression",
    "crypto/src/blake2s/test_program",
    "circuit_test_program",
    "tests/evm_tester",
    "tests/instances/eth_runner",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-os/"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync", "zk", "risc-v"]
categories = ["cryptography"]

[workspace.dependencies]
zksync_os_evm_errors = { version = "0.0.9", default-features =  false }
zksync_os_interface = { version = "0.0.9"}

risc_v_simulator = { git = "https://github.com/matter-labs/zksync-airbender", tag = "v0.4.3"}
blake2s_u32 = { git = "https://github.com/matter-labs/zksync-airbender", tag = "v0.4.3"}
prover_examples = { git = "https://github.com/matter-labs/zksync-airbender", tag = "v0.4.3"}
execution_utils = { git = "https://github.com/matter-labs/zksync-airbender", tag = "v0.4.3"}
prover = { git = "https://github.com/matter-labs/zksync-airbender", tag = "v0.4.3" }

# [profile.dev]
# opt-level = 0
# lto = false
# panic = "abort"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = true

[patch.crates-io]
#zksync_os_evm_errors = { path = "../zksync-os-interface/crates/evm-errors" }
#zksync_os_interface = { path = "../zksync-os-interface/crates/interface" }

[patch."https://github.com/matter-labs/zksync-airbender"]
# blake2s_u32 = {git = "ssh://git@github.com/matter-labs/zksync-airbender.git", branch = "av_bigint_precompile", features = ["opcode_stats"] }
# risc_v_simulator = {git = "ssh://git@github.com/matter-labs/zksync-airbender.git", branch = "av_bigint_precompile", features = ["opcode_stats"] }
# prover_examples = {git = "ssh://git@github.com/matter-labs/zksync-airbender.git", branch = "av_bigint_precompile", features = ["opcode_stats"] }
# riscv_common = {git = "ssh://git@github.com/matter-labs/zksync-airbender.git", branch = "av_bigint_precompile", features = ["opcode_stats"] }

# blake2s_u32 = { path = "../zksync-airbender/blake2s_u32" }
# prover_examples = { path = "../zksync-airbender/circuit_defs/prover_examples" }
# risc_v_simulator = { path = "../zksync-airbender/risc_v_simulator" }
# execution_utils = { path = "../zksync-airbender/execution_utils" }
