[workspace]
resolver = "2"

members = [
    "basic_bootloader",
    "basic_system",
    "callable_oracles",
    "crypto",
    "cycle_marker",
    "evm_interpreter",
    "forward_system",
    "oracle_provider",
    "proof_running_system",
    "storage_models",
    "zk_ee",
    "system_hooks",
    "supporting_crates/modexp",
    "supporting_crates/keccak",
    "supporting_crates/solidity_abi",
    "supporting_crates/solidity_abi_derive",
    "supporting_crates/delegated_u256",
    "supporting_crates/u256",
    "supporting_crates/cc-traits",
    "api",
    "tests/rig",
    "tests/instances/transactions",
    "tests/instances/erc20",
    "tests/instances/forge_tests",
    "tests/instances/precompiles",
    "tests/instances/bench",
    "tests/instances/unit",
    "tests/instances/eth_runner",
    "tests/instances/system_hooks",
    "tests/binary_checker",
    "zksync_os_runner",
]

default-members = [
    "basic_bootloader",
    "basic_system",
    "callable_oracles",
    "crypto",
    "evm_interpreter",
    "forward_system",
    "oracle_provider",
    "proof_running_system",
    "storage_models",
    "zk_ee",
    "system_hooks",
    "supporting_crates/modexp",
    "supporting_crates/cc-traits"
]

exclude = [
    "zksync_os",
    "supporting_crates/nostd_compression",
    "iwasm_ee",
    "iwasm/iwasm_interpreter",
    "iwasm/iwasm_specification",
    "iwasm/syslib",
    "iwasm/syslib_derive",
    "crypto/src/blake2s/test_program",
    "circuit_test_program",
    "tests/contracts_wasm/c_erc20",
    "tests/contracts_wasm/bench",
    "tests/contracts_wasm/unit",
    "tests/evm_tester",
    "crypto/src/sha3/test_program",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-os/"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync", "zk", "risc-v"]
categories = ["cryptography"]

[workspace.dependencies]
blake2s_u32 = { git = "https://github.com/matter-labs/zksync-airbender", branch = "av_ethproofs_gpu", default-features = false }
common_constants = { git = "https://github.com/matter-labs/zksync-airbender", branch = "av_ethproofs_gpu" }
ruint = { version = "1.16", default-features = false }
arrayvec = { version = "0.7", default-features = false }
serde = { version = "1", default-features = false }

# [profile.dev]
# opt-level = 0
# lto = false
# panic = "abort"

# [profile.dev]
# debug-assertions = true
# opt-level = 0
# lto = "fat"
# codegen-units = 16
# debug = false

[profile.release_with_symbols]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 1
debug = true

[profile.release]
opt-level = 3
lto = "thin"
# lto = true 
codegen-units = 16
# debug = false
debug = true

[patch."https://github.com/matter-labs/zksync-airbender"]
# blake2s_u32 = {git = "ssh://git@github.com/matter-labs/zksync-airbender.git", branch = "av_bigint_precompile", features = ["opcode_stats"] }

# blake2s_u32 = { path = "../zksync-airbender/blake2s_u32" }

