[package]
name = "basic_bootloader"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zk_ee = { path = "../zk_ee", default-features = false }
cycle_marker = { path = "../cycle_marker" }
evm_interpreter = { path = "../evm_interpreter", default-features = false }
system_hooks = { path = "../system_hooks", default-features = false }
basic_system = { path = "../basic_system", default-features = false }
ruint = { version = "1.12.3", default-features = false, features = ["alloc"] }
crypto = { path = "../crypto", default-features = false }
hex = {version = "*", optional = true}
arrayvec = { version = "0.7.4", default-features = false }
strum_macros = "0.27.1"
paste = "1.0.15"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"], optional = true }
cfg-if = "*"

[dev-dependencies]
alloy = { version = "1", features = ["rlp", "full"] }
alloy-rlp = { version = "*" }
alloy-primitives = { version = "1", features = ["arbitrary"] }

[features]
serde = ["dep:serde", "ruint/serde"]
testing = ["zk_ee/testing", "evm_interpreter/testing", "hex", "serde"]
default = ["testing"]
code_in_kernel_space = []
transfers_to_kernel_space = []
charge_priority_fee = []
evm-compatibility = ["code_in_kernel_space", "transfers_to_kernel_space", "system_hooks/mock-unsupported-precompiles", "charge_priority_fee"]
cycle_marker = ["system_hooks/cycle_marker", "cycle_marker/log_to_file"]
resources_for_tester = []
unlimited_native = []
disable_system_contracts = []
error_origins = ["zk_ee/error_origins"]
evm_refunds = ["zk_ee/evm_refunds", "evm_interpreter/evm_refunds"]
pectra = []
