[package]
name = "basic_bootloader"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zk_ee = { path = "../zk_ee", default-features = false }
cycle_marker = { path = "../cycle_marker" }
evm_interpreter = { path = "../evm_interpreter", default-features = false }
system_hooks = { path = "../system_hooks", default-features = false }
basic_system = { path = "../basic_system", default-features = false }
ruint = { workspace = true, default-features = false }
arrayvec = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false, features = ["derive"], optional = true }
crypto = { path = "../crypto", default-features = false }
hex = {version = "*", optional = true}
strum_macros = "0.27.1"
paste = "1.0.15"
cfg-if = "*"
serde-big-array = "0.5"


[dev-dependencies]
alloy = { version = "1", features = ["rlp", "full"] }
alloy-rlp = { version = "*" }
alloy-primitives = { version = "1", features = ["arbitrary"] }

[features]
serde = ["dep:serde", "ruint/serde"]
testing = ["zk_ee/testing", "evm_interpreter/testing", "hex", "serde"]
default = ["testing"]
eip-7702 = []
eip_7623 = []
eip-4844 = ["system_hooks/point_eval_precompile"]
burn_base_fee = []
cycle_marker = ["system_hooks/cycle_marker", "cycle_marker/log_to_file"]
resources_for_tester = []
unlimited_native = []
disable_system_contracts = []
error_origins = ["zk_ee/error_origins"]
