[package]
name = "basic_system"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zk_ee = { path = "../zk_ee", default-features = false }
evm_interpreter = { path = "../evm_interpreter"  }
ruint = { workspace = true, default-features = false, features = ["serde"] }
arrayvec = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false, features = ["derive"], optional = true }
crypto = { path = "../crypto", default-features = false, features = ["secp256k1-static-context"]}
either = { workspace = true, default-features = false }
storage_models = { path = "../storage_models", default-features = false }
modexp = { path = "../supporting_crates/modexp" }
cycle_marker = { path = "../cycle_marker" }
num-bigint = { workspace = true, default-features = true, optional = true }
num-traits = { workspace = true, default-features = true, optional = true }
cc-traits = { path = "src/system_implementation/ethereum_storage_model/supporting_crates/cc-traits" }
const-hex = { version = "1", default-features = false }

rand = {version = "0.9.0", optional = true}
strum_macros = { workspace = true }
paste = { workspace = true }
[features]
testing = ["zk_ee/testing", "evm_interpreter/testing", "serde", "ruint/serde", "rand", "crypto/testing", "num-bigint", "num-traits"]
default = ["testing"]
cycle_marker = ["cycle_marker/log_to_file"]
proving = ["crypto/proving"]
# The finish method will just return inputs, so outputs can be processed outside bootloader
# Used for proving multi block batch within 1 run
multiblock-batch = []
state-diffs-pi = []

[dev-dependencies]
hex = { workspace = true }
proptest = { workspace = true }
crypto = { path = "../crypto", default-features = false, features = ["secp256k1-static-context", "testing"]}
num-bigint = { workspace = true, default-features = true }
num-traits = { workspace = true, default-features = true }
callable_oracles = { path = "../callable_oracles" }
oracle_provider = { path = "../oracle_provider" }
arbitrary = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
alloy-rpc-types-debug = { workspace = true }
alloy = { workspace = true, features = ["rlp", "full"] }
alloy-rlp = { workspace = true }
alloy-primitives = { workspace = true, features = ["arbitrary"] }
reqwest = { workspace = true, features = ["blocking", "json"] }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }
reth-trie-sparse = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.8.4" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(fuzzing)"] }
