[package]
name = "callable_oracles"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zk_ee = { path = "../zk_ee", default-features = false }
crypto = { path = "../crypto", default-features = false }
oracle_provider = { path = "../oracle_provider" }
basic_system = { path = "../basic_system", default-features = false }

ruint = { workspace = true, default-features = false }
k256 =  { version = "0.13", default-features = false, features = ["arithmetic"] }

risc_v_simulator = { git = "https://github.com/matter-labs/zksync-airbender", branch = "av_fix_verifier_binaries", optional = true }
riscv_transpiler = { git = "https://github.com/matter-labs/zksync-airbender", branch = "av_fix_verifier_binaries", optional = true }
num-bigint = { version = "*", optional = true }
num-traits = { version = "*", optional = true }

[dev-dependencies]
hex = "*"

[features]
default = ["evaluate"]
evaluate = ["risc_v_simulator", "riscv_transpiler", "num-bigint", "num-traits"]
