[package]
name = "callable_oracles"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zk_ee = { path = "../zk_ee", default-features = false }
ruint = { workspace = true, default-features = false }
crypto = { path = "../crypto", default-features = false }
oracle_provider = { path = "../oracle_provider" }
basic_system = { path = "../basic_system", default-features = false }
basic_bootloader = { path = "../basic_bootloader", default-features = false }

riscv_transpiler = { workspace = true, optional = true }
c-kzg = "2.1.5"

[dev-dependencies]
hex = { workspace = true }

[features]
default = ["evaluate"]
evaluate = ["riscv_transpiler"]
