[package]
name = "circuit_test_program"
version = "0.1.0"
edition = "2021"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-os/"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync", "zk", "risc-v"]
categories = ["cryptography"]

[dependencies]
riscv_common = {git = "https://github.com/matter-labs/zksync-airbender", rev = "8ef06cf8dc63b04e4b309b501d54bb571e86a1a9" }
crypto = { path = "../crypto", features = ["proving"]}
