[package]
name = "cycle_marker"
version = "0.1.0"
edition = "2024"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
riscv_transpiler = { workspace = true, optional = true }

[features]
use_riscv_transpiler = ["riscv_transpiler"]
log_to_file = []
