[package]
name = "evm_interpreter"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ruint = { workspace = true, default-features = false }
arrayvec = { workspace = true, default-features = false }
zk_ee = { path = "../zk_ee", default-features = false }
crypto = { path = "../crypto", default-features = false }
either = { version = "*", default-features = false }
cycle_marker = { path = "../cycle_marker" }
strum_macros = "0.27.1"
paste = "1.0.15"

[features]
point_eval_precompile = []
mock-unsupported-precompiles = []
p256_precompile = []
eip-7645 = []
eip-2537 = []
eip-152 = []
default = []
testing = ["zk_ee/testing"]
cycle_marker = ["cycle_marker/log_to_file"]
error_origins = []
