[package]
name = "forward_system"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# temporary for witgen
zksync_os_runner = {path = "../zksync_os_runner"}
oracle_provider = { path = "../oracle_provider" }
callable_oracles = { path = "../callable_oracles" }
zk_ee = { path = "../zk_ee", default-features = false }
evm_interpreter = { path = "../evm_interpreter", default-features = false }
basic_system = { path = "../basic_system", default-features = false }
basic_bootloader = { path = "../basic_bootloader", default-features = false }
zksync_os_evm_errors = { workspace = true, default-features = false }
zksync_os_interface = { workspace = true, default-features = false }
system_hooks = { path = "../system_hooks", default-features = false }

ruint = { version = "1.12.3", default-features = false, features = ["alloc"] }
alloy = { version = "1", default-features = false }
arrayvec = { version = "0.7.4", default-features = false }
hex = { version = "*", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
bincode = "1.3"
strum_macros = "0.27.1"
paste = "1.0.15"

[features]
testing = ["zk_ee/testing", "evm_interpreter/testing", "basic_system/testing", "basic_bootloader/testing", "hex"]
default = ["testing"]
error_origins = ["zk_ee/error_origins"]
no_print = []
unlimited_native = ["basic_bootloader/unlimited_native"]

# A feature for every specific use case

# Features used for production, by both the singleblock_batch and multiblock_batch binaries.
production = ["basic_bootloader/eip-7702", "system_hooks/p256_precompile"]

# Features used for tests.
for_tests = ["production", "system_hooks/point_eval_precompile"]

# Features used for eth_runner
eth_runner = ["basic_bootloader/disable_system_contracts", "zk_ee/prevrandao", "unlimited_native","basic_bootloader/burn_base_fee"]

# Features used for evm_tester
evm_tester = ["basic_bootloader/resources_for_tester", "basic_bootloader/disable_system_contracts", "zk_ee/prevrandao", "basic_bootloader/eip-7702", "system_hooks/p256_precompile","system_hooks/point_eval_precompile",  "basic_bootloader/burn_base_fee", "system_hooks/mock-unsupported-precompiles", "unlimited_native"]

# Features used for legacy evm_tester. Only defined in forward system,
# as the legacy evm_tester does not perform a proof run.
evm_tester_legacy = ["basic_bootloader/resources_for_tester", "basic_bootloader/disable_system_contracts", "zk_ee/prevrandao", "basic_bootloader/eip-7702", "basic_bootloader/burn_base_fee", "system_hooks/mock-unsupported-precompiles", "unlimited_native"]
