[package]
name = "oracle_provider"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zk_ee = { path = "../zk_ee", default-features = false }
basic_system = { path = "../basic_system", default-features = false }

risc_v_simulator = { git = "https://github.com/matter-labs/zksync-airbender", branch = "av_ethproofs_gpu" }
riscv_transpiler = { git = "https://github.com/matter-labs/zksync-airbender", branch = "av_ethproofs_gpu" }
