[package]
name = "proof_running_system"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zk_ee = { path = "../zk_ee", default-features = false }
evm_interpreter = { path = "../evm_interpreter", default-features = false }
basic_system = { path = "../basic_system", default-features = false }
system_hooks = { path = "../system_hooks", default-features = false }
basic_bootloader = { path = "../basic_bootloader", default-features = false }
ruint = { version = "1.12.3", default-features = false, features = ["alloc"] }
crypto = { path = "../crypto", default-features = false }
arrayvec = { version = "0.7.4", default-features = false }
cfg-if = "*"
cc-traits = { version = "*", default-features = false }
seq-macro = { version = "*", default-features = false }
talc = { version = "*", default-features = false, features = ["allocator", "nightly_api"]}
lock_api = "0.4.11"
# talc = { path = "../../talc", default-features = false, features = ["allocator", "nightly_api"]}

[dev-dependencies]
hex = "*"
fastrand = "2.0.2"

[features]
testing = ["zk_ee/testing", "evm_interpreter/testing", "basic_system/testing", "basic_bootloader/testing"]
default = ["testing"]
proving = ["crypto/proving", "basic_system/proving"]
scalloc = []
cycle_marker = ["zk_ee/cycle_marker", "evm_interpreter/cycle_marker", "basic_system/cycle_marker", "basic_bootloader/cycle_marker"]
evm-compatibility = ["basic_bootloader/evm-compatibility", "basic_system/evm-compatibility"]
unlimited_native = ["basic_bootloader/unlimited_native"]
wrap-in-batch = ["basic_system/wrap-in-batch"]
global-alloc = []
resources_for_tester = ["basic_bootloader/resources_for_tester"]
disable_system_contracts = ["basic_bootloader/disable_system_contracts"]
p256_precompile = ["system_hooks/p256_precompile"]
point_eval_precompile = ["system_hooks/point_eval_precompile"]
error_origins = ["zk_ee/error_origins"]
prevrandao = ["zk_ee/prevrandao"]
evm_refunds = ["zk_ee/evm_refunds", "basic_system/evm_refunds", "basic_bootloader/evm_refunds", "evm_interpreter/evm_refunds"]
pectra = ["basic_bootloader/pectra"]
multiblock-batch = ["basic_system/multiblock-batch"]
state-diffs-pi = ["basic_system/state-diffs-pi"]
